--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -6,6 +6,40 @@
     <title>Jollof Rice Recipe</title>
 </head>
 <body>
-   <h1>Jollof Rice</h1> 
+   <h1>Ghanaian Jollof Rice</h1> 
+   <img src="jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken" height="310" width="610">
+   <br>
+   <h2>Description</h2>
+   <p>Many countries in West Africa such as Ghana, Nigeria, and Senegal eat jollof rice. But each of the countries has special and different ways they prepare jollof rice.</p>
+   <p>Ghanaian jollof rice is the best and the sweetest jollof rice in Africa. Today, I'll be showing you how to make a palatable and appetizing Ghanaian jollof rice.  </p>
+    <h3>Ingredients</h3>    
+    <ul>
+        <li>2 large yellow onions, roughly chopped</li>
+        <li>⅓ cup vegetable oil, plus 2 tablespoons, divided</li>
+        <li>14 oz diced tomato, 2 cans</li>
+        <li>6 oz tomato paste, 1 can</li>
+        <li>Pepper</li>
+        <li>Ginger</li>
+        <li>Garlic</li>
+        <li>Salt</li>
+        <li>walter</li>
+        <li>Species</li>
+        <li>fried chicken</li>
+        <li>2 ½ cups long grain rice, rinsed</li>
+        <li>1 cup mixed vegetable</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Blend onions, pepper, ginger, and garlic and put the mixture in a bowl</li>
+        <li>Blend tomatoes and put it in a bowl</li>
+        <li>Heat oil in a large, heavy-bottomed pot over medium heat.</li>
+        <li>Once the oil is shimmering, add the onion puree and cook until the water has cooked out and the puree is starting to brown, about 10 minutes.</li>
+        <li>Add blended tomatoes, salt, and species of your choice</li>
+        <li>Cook for 20-30 minutes, stirring occasionally, until the stew has reduced by half and is deep red in color.</li>
+        <li>Add the rice and water. Bring to a boil, then reduce the heat to low and cover the pot with foil and a lid. Simmer for another 30 minutes, until the rice is cooked through and the liquid is absorbed.</li>
+        <li>Add mixed vegetables and stir. Let it simmer for about 3 minutes</li>
+        
+    </ol> 
+    <p> <b>Serve the jollof rice with a meat of your choice like fried chicken</b></p>
 </body>
 </html>
