Edit banku_tilapia.html & kontomire_plantain.html
Added a picture of banku and tilapia to banku_tilapia.html.
Added ingredients and methods to make banku and tilapia.
Added a picture of boiled plantain with kontomire stew to
kontomire_plantain.html.
Added ingredients and methods to make kontomire stew and boiled plantain.

--- a/recipes/banku_tilapia.html
+++ b/recipes/banku_tilapia.html
@@ -7,5 +7,44 @@
 </head>
 <body>
     <h1>Banku and Tilapia</h1>
-</body>
+    <img src="banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito" height="300" width="600">
+    <h2>What is Banku and Tilapia?</h2>
+    <p>Banku and tilapia is a delious meal in Ghana, West frica. Ghanaians eat banku at several occasions 
+        such as naming ceremony, wedding, and parties. <br> They also eat banku as a regular food in their home. </p>
+    <p>Banku is made from cassava and corn dough. Tilapia is a fish that Ghanaians use for making making stew and soups.
+        It can also be grilled, fried, and baked. </p>
+    
+    <br>
+    <h3>Banku and Tilapia Ingredients</h3>
+    <ul>
+        <li>Properly clean tilapia</li>
+        <li>Corn dough</li>
+        <li>Cassava dough</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+        <li>Tomatoes</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Ginger</li>
+        <li>Water</li>
+
+    </ul>
+    <br>
+    <h3>How to prepare Banku and Tilapia</h3>
+
+    <ol>
+        <li>Grind onion, garlic, and ginger.</li>
+        <li>Pour the onion mixture on a properly cleaned tilapia. Add salt and rob the onion mixture inside the cavity and into the slashes of the tilapia. <br> Cover the tilapia and leave the fish to marinate for some time (30 minutes to 1 hour) </li>
+        <li>Grill or bake the tilapia for 25-30 minutes until nicely browned and cooked through.</li>
+        <li>Mix equal amounts of cassava and corn dough in a pan </li>
+        <li>Add water to the mixture and stir till it looks porridge like</li>
+        <li>Add salt to the mixture and put it on fire </li>
+        <li>Stir the mixture with a wooden ladle</li>
+        <li>As mixture begins to thicken, continue to stir till it becomes a thick pulp        </li>
+        <li>Continue to stir until color of the mixture changes to a light cream color        </li>
+        <li>This indicates that the banku is ready and it can be molded with a small bowl into balls</li>
+        <li>Prepare the pepper sauce by grinding onion, pepper, and tomatoes. Add salt to tast</li>
+    </ol>
+    <br>
+    <b>You can serve the banku and tilapia with Ghanaian sauce like shito, avocado, and vegetables of your choice.</b>
 </html>
