--- a/recipes/kontomire_plantain.html
+++ b/recipes/kontomire_plantain.html
@@ -7,5 +7,44 @@
 </head>
 <body>
    <h1>Kontomire Stew and Boiled Plantain</h1> 
+   <img src="kontomire_plaintain.jpeg" alt="kontomire stew and boiled plaintain served with avocado, koobi, and egg" height="350" width="700">
+   <h2>What is Kontomire stew and boiled Plantain</h2>
+   <p>Kontomire stew and boiled plantain is one of the most famous food in the Akan part of Ghana. It is usally sevred with egg, avocado, and salted tilapia called koobi</p>
+   <p>Kontomire is the leaves of cocoyam. Kontomire is used to make palava stew and various soups in Ghana such as nkate-konto soup and ebunuebunu soup which are eaten with fufu and banku.</p>
+   <p>Kontomire stew can be eaten with boiled plantain, boiled yam, and boiled rice</p>
+   
+   <h3>What do you need to make this delious meal?</h3>
+    <ul>
+        <li>Plantain</li>
+        <li></li>Kontomire or cocoyam leaves</li>
+        <li>Koobi or salted tilapia</li>
+        <li>Salt</li>
+        <li>Water</li>
+        <li>Onion</li>
+        <li>Palm oil</li>
+        <li>Pepper</li>
+        <li>Avocado</li>
+        <li>Egg</li>
+        
+    </ul>
+
+    <h3>Method</h3>
+    <ol>
+        <li>Peel plantain and boil with enough water.
+            <br> Add salt, egg, and koobi to the boiling plantain.</li>
+        <li>Wash all vegetables</li>
+        <li>Wash kontomire and pepper. Boil afterwards</li>
+        <li>When the kontomire and pepper are soft, drain the water.</li>
+        <li>Gring pepper, onion, and cooked kontomire in Awowa or Asanka. Add salt to taste</li>
+        <li>Heat palm oil in a saucepan, add onion and allow to simmer.</li>
+        <li>Slice some onion.</li>
+        <li>Pour the hot palm oil onto the kontomire and add slice onion</li>
+        <li>When the plantain and koobi is soft, drain the water from it. <br> Pour some cold water onto the plantain in a seperate bowl. Remove the egg shell from the egg.</li>
+        <li>Peel avocado and slice it</li>
+        <li>Add egg, sliced avocado, and koobi to the kontomire stew</li>
+        <li>Drain water from the plantain and place the plantain on a plate</li>
+        
+    </ol>
+    <b>The food is ready. Enjoy!</b>
 </body>
 </html>
