--- a/recipes/banku_tilapia.html
+++ b/recipes/banku_tilapia.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Banku and Tilapia</h1>
-    <img src="banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito" height="300" width="600">
+    <img src="../img/banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito" height="300" width="600">
     <h2>What is Banku and Tilapia?</h2>
     <p>Banku and tilapia is a delious meal in Ghana, West frica. Ghanaians eat banku at several occasions 
         such as naming ceremony, wedding, and parties. <br> They also eat banku as a regular food in their home. </p>
