--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Ghanaian Jollof Rice</h1> 
-   <img src="jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken" height="310" width="610">
+   <img src="../img/jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken" height="310" width="610">
    <br>
    <h2>Description</h2>
    <p>Many countries in West Africa such as Ghana, Nigeria, and Senegal eat jollof rice. But each of the countries has special and different ways they prepare jollof rice.</p>
