Edit index.html and README.md

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Ghanaian Recipes</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1> 
-  <a href="./recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a>
+  <h1>Ghanaian Recipes</h1> 
+  <img src=".img/gh.png" alt="Various Ghanaian meals"
+  
+  <br>
+  <ul>
+    <li><a href=".img/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a></li>
+  <li><a href="./img/banku_tilapia.html" >Banku_and_Tilapia</a></li>
+  <li><a href="./img/kontomire_plantain.html">Kontomire_Stew_Boiled_Plantain</a></li>
+  </ul>
+ 
+
 </body>
 </html>
