--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
   <h1>Ghanaian Recipes</h1> 
-  <img src=".img/gh.png" alt="Various Ghanaian meals"
+  <img src="./img/gh.png" alt="Various Ghanaian meals">
   
   <br>
   <ul>
-    <li><a href=".img/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a></li>
-  <li><a href="./img/banku_tilapia.html" >Banku_and_Tilapia</a></li>
-  <li><a href="./img/kontomire_plantain.html">Kontomire_Stew_Boiled_Plantain</a></li>
+    <li><a href="./recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a></li>
+   <li><a href="./recipes/banku_tilapia.html" >Banku_and_Tilapia</a></li>
+   <li><a href="./recipes/kontomire_plantain.html">Kontomire_Stew_Boiled_Plantain</a></li>
   </ul>
  
 
