Add style.css and link style.css to the html files

--- a/recipes/banku_tilapia.html
+++ b/recipes/banku_tilapia.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banku and Tilapia</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="bt">
     <h1>Banku and Tilapia</h1>
-    <img src="../img/banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito" height="300" width="600">
+    <img src="../img/banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito">
     <h2>What is Banku and Tilapia?</h2>
     <p>Banku and tilapia is a delious meal in Ghana, West frica. Ghanaians eat banku at several occasions 
         such as naming ceremony, wedding, and parties. <br> They also eat banku as a regular food in their home. </p>
