--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jollof Rice Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="jr">
    <h1>Ghanaian Jollof Rice</h1> 
-   <img src="../img/jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken" height="310" width="610">
+   <img src="../img/jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken">
    <br>
    <h2>Description</h2>
    <p>Many countries in West Africa such as Ghana, Nigeria, and Senegal eat jollof rice. But each of the countries has special and different ways they prepare jollof rice.</p>
