--- a/recipes/kontomire_plantain.html
+++ b/recipes/kontomire_plantain.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontomire Stew and Boiled Plantain</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="kp">
    <h1>Kontomire Stew and Boiled Plantain</h1> 
-   <img src="../img/kontomire_plaintain.jpeg" alt="kontomire stew and boiled plaintain served with avocado, koobi, and egg" height="350" width="700">
+   <img src="../img/kontomire_plaintain.jpeg" alt="kontomire stew and boiled plaintain served with avocado, koobi, and egg" height=auto width="700">
    <h2>What is Kontomire stew and boiled Plantain</h2>
    <p>Kontomire stew and boiled plantain is one of the most famous food in the Akan part of Ghana. It is usally sevred with egg, avocado, and salted tilapia called koobi</p>
    <p>Kontomire is the leaves of cocoyam. Kontomire is used to make palava stew and various soups in Ghana such as nkate-konto soup and ebunuebunu soup which are eaten with fufu and banku.</p>
