Edit html files and style.css
Add margin and paddding to the files.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <title>Ghanaian Recipes</title>
     <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
+<div id="div">
   <h1>Ghanaian Recipes</h1> 
-  <img src="./img/gh.png" alt="Various Ghanaian meals">
   
-  <br>
-  <ul>
-    <li><a href="./recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a></li>
-   <li><a href="./recipes/banku_tilapia.html" >Banku_and_Tilapia</a></li>
-   <li><a href="./recipes/kontomire_plantain.html">Kontomire_Stew_Boiled_Plantain</a></li>
-  </ul>
+  <div id="img">
+    <img src="./img/gh.png" alt="Various Ghanaian meals">
+  </div>
  
-
+  <ul>
+    <li class="one"><a href="./recipes/jollof-rice.html" target="_blank" rel="noopener noreferrer">Jollof-rice</a></li>
+   <li class="one"><a href="./recipes/banku_tilapia.html" >Banku_and_Tilapia</a></li>
+   <li class="one"><a href="./recipes/kontomire_plantain.html">Kontomire_Stew_Boiled_Plantain</a></li>
+  </ul>
+  
+</div>
 </body>
 </html>
