--- a/recipes/banku_tilapia.html
+++ b/recipes/banku_tilapia.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body id="bt">
+    <div id="bk">
     <h1>Banku and Tilapia</h1>
+    <div #img>
     <img src="../img/banku_and_tilapia.png" alt="a delicious banku served with tilapia, peper sauce and shito">
+    </div>
     <h2>What is Banku and Tilapia?</h2>
     <p>Banku and tilapia is a delious meal in Ghana, West frica. Ghanaians eat banku at several occasions 
         such as naming ceremony, wedding, and parties. <br> They also eat banku as a regular food in their home. </p>
-    <p>Banku is made from cassava and corn dough. Tilapia is a fish that Ghanaians use for making making stew and soups.
+    <p class="p1">Banku is made from cassava and corn dough. Tilapia is a fish that Ghanaians use for making making stew and soups.
         It can also be grilled, fried, and baked. </p>
     
     <br>
     <h3>Banku and Tilapia Ingredients</h3>
-    <ul>
+    <ul id="ul">
         <li>Properly clean tilapia</li>
         <li>Corn dough</li>
         <li>Cassava dough</li>
@@ -33,7 +36,7 @@
     <br>
     <h3>How to prepare Banku and Tilapia</h3>
 
-    <ol>
+    <ol id="ul">
         <li>Grind onion, garlic, and ginger.</li>
         <li>Pour the onion mixture on a properly cleaned tilapia. Add salt and rob the onion mixture inside the cavity and into the slashes of the tilapia. <br> Cover the tilapia and leave the fish to marinate for some time (30 minutes to 1 hour) </li>
         <li>Grill or bake the tilapia for 25-30 minutes until nicely browned and cooked through.</li>
@@ -48,4 +51,8 @@
     </ol>
     <br>
     <b>You can serve the banku and tilapia with Ghanaian sauce like shito, avocado, and vegetables of your choice.</b>
-</html>
+ 
+    </div>
+</body> 
+ 
+    </html>
