--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body id="jr">
+    <div id="bk">
    <h1>Ghanaian Jollof Rice</h1> 
+   <div #img>
    <img src="../img/jollof-rice.jpg" alt="A picture of Ghanaian jollof rice with fried chicken">
+   </div>
    <br>
    <h2>Description</h2>
    <p>Many countries in West Africa such as Ghana, Nigeria, and Senegal eat jollof rice. But each of the countries has special and different ways they prepare jollof rice.</p>
-   <p>Ghanaian jollof rice is the best and the sweetest jollof rice in Africa. Today, I'll be showing you how to make a palatable and appetizing Ghanaian jollof rice.  </p>
+   <p class="p1">Ghanaian jollof rice is the best and the sweetest jollof rice in Africa. Today, I'll be showing you how to make a palatable and appetizing Ghanaian jollof rice.  </p>
     <h3>Ingredients</h3>    
-    <ul>
+    <ul id="ul">
         <li>2 large yellow onions, roughly chopped</li>
         <li>⅓ cup vegetable oil, plus 2 tablespoons, divided</li>
         <li>14 oz diced tomato, 2 cans</li>
@@ -30,7 +33,7 @@
         <li>1 cup mixed vegetable</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol id="ul">
         <li>Blend onions, pepper, ginger, and garlic and put the mixture in a bowl</li>
         <li>Blend tomatoes and put it in a bowl</li>
         <li>Heat oil in a large, heavy-bottomed pot over medium heat.</li>
@@ -42,5 +45,6 @@
         
     </ol> 
     <p> <b>Serve the jollof rice with a meat of your choice like fried chicken</b></p>
+    </div>
 </body>
 </html>
