--- a/recipes/kontomire_plantain.html
+++ b/recipes/kontomire_plantain.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body id="kp">
+    <div id="bk">
    <h1>Kontomire Stew and Boiled Plantain</h1> 
+   <div #img>
    <img src="../img/kontomire_plaintain.jpeg" alt="kontomire stew and boiled plaintain served with avocado, koobi, and egg" height=auto width="700">
+</div>
    <h2>What is Kontomire stew and boiled Plantain</h2>
    <p>Kontomire stew and boiled plantain is one of the most famous food in the Akan part of Ghana. It is usally sevred with egg, avocado, and salted tilapia called koobi</p>
-   <p>Kontomire is the leaves of cocoyam. Kontomire is used to make palava stew and various soups in Ghana such as nkate-konto soup and ebunuebunu soup which are eaten with fufu and banku.</p>
+   <p class="p1">Kontomire is the leaves of cocoyam. Kontomire is used to make palava stew and various soups in Ghana such as nkate-konto soup and ebunuebunu soup which are eaten with fufu and banku.</p>
    <p>Kontomire stew can be eaten with boiled plantain, boiled yam, and boiled rice</p>
    
    <h3>What do you need to make this delious meal?</h3>
-    <ul>
+    <ul id="ul">
         <li>Plantain</li>
-        <li></li>Kontomire or cocoyam leaves</li>
+        <li>Kontomire or cocoyam leaves</li>
         <li>Koobi or salted tilapia</li>
         <li>Salt</li>
         <li>Water</li>
@@ -30,7 +33,7 @@
     </ul>
 
     <h3>Method</h3>
-    <ol>
+    <ol id="ul">
         <li>Peel plantain and boil with enough water.
             <br> Add salt, egg, and koobi to the boiling plantain.</li>
         <li>Wash all vegetables</li>
@@ -47,5 +50,6 @@
         
     </ol>
     <b>The food is ready. Enjoy!</b>
+    </div>
 </body>
 </html>
